--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,6 @@ fire==0.5.0 # easy CLI creation
 tensorflow==2.16.2; sys_platform != 'darwin' or platform_machine != 'arm64'
 tensorflow-macos==2.16.2; sys_platform == 'darwin' and platform_machine == 'arm64'
 
+# pikaGPT
+mlx==0.16.0
 
